--- a/src/BlazorWebView.Android/BlazorWebView.Android.csproj
+++ b/src/BlazorWebView.Android/BlazorWebView.Android.csproj
@@ -66,4 +66,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <None Include="build\**" Pack="True" PackagePath="build\" />
+  </ItemGroup>
 </Project>
