--- a/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
+++ b/src/BlazorWebView.iOS/BlazorWebView.iOS.csproj
@@ -7,6 +7,7 @@
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>BlazorWebView.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,4 +41,8 @@
     <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
   <Import Project="../../build.props" />
+
+  <ItemGroup>
+    <None Include="build\**" Pack="True" PackagePath="build\" />
+  </ItemGroup>
 </Project>
