--- a/sample/BlazorApp.Mac/BlazorApp.Mac.csproj
+++ b/sample/BlazorApp.Mac/BlazorApp.Mac.csproj
@@ -12,7 +12,6 @@
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -95,19 +94,8 @@
       <Project>{196C67E9-3E9E-4D57-B977-11BF00073FC9}</Project>
       <Name>BlazorApp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\BlazorWebView.Mac\BlazorWebView.Mac.csproj">
-      <Project>{BA247A5F-A935-47F7-BEFF-3619512B64F4}</Project>
-      <Name>BlazorWebView.Mac</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\BlazorWebView\BlazorWebView.csproj">
-      <Project>{581141F6-5522-4B66-8404-4C376F42FB5C}</Project>
-      <Name>BlazorWebView</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="..\BlazorApp\wwwroot\index.html">
-      <Link>Resources\wwwroot\index.html</Link>
-    </BundleResource>
     <BundleResource Include="..\BlazorApp\wwwroot\css\site.css">
       <Link>Resources\wwwroot\css\site.css</Link>
     </BundleResource>
@@ -146,46 +134,13 @@
     </BundleResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient">
-      <Version>3.2.0-preview3.20168.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
-      <Version>3.2.0-preview3.20168.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Features">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles">
-      <Version>2.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.WebEncoders">
-      <Version>3.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Net.Http.Headers">
-      <Version>2.2.8</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
-    </PackageReference>
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.1.118</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.Buffers">
-      <Version>4.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.5.4</Version>
+    <PackageReference Include="BlazorWebView.Mac">
+      <Version>0.2.0-preview1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
