--- a/.github/workflows/coreosx.yml
+++ b/.github/workflows/coreosx.yml
@@ -18,8 +18,6 @@ jobs:
         dotnet-version: 3.1.201
     - name: Setup nodejs
       uses: actions/setup-node@v1
-    - name: Restore packages
-      run: nuget restore
     - name: Yarn
       working-directory: ./src/BlazorWebView.JS/upstream/aspnetcore/web.js
       run: yarn
@@ -47,6 +45,6 @@ jobs:
     - name: Push nuget packages
       working-directory: ./packages/
       run: |
-        dotnet nuget push BlazorWebView.Mac.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-        dotnet nuget push BlazorWebView.iOS.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-        dotnet nuget push BlazorWebView.Android.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push BlazorWebView.Mac.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push BlazorWebView.iOS.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push BlazorWebView.Android.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
