--- a/.github/workflows/coreosx.yml
+++ b/.github/workflows/coreosx.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Build BlazorWebView.Mac
       working-directory: ./src/BlazorWebView.Mac/
       run: |
+        nuget restore BlazorWebView.Mac.csproj
         dotnet restore
         msbuild BlazorWebView.Mac.csproj /t:Build /p:Configuration=Release
     - name: Build BlazorWebView.iOS
@@ -42,9 +43,6 @@ jobs:
       run: |
         dotnet restore
         msbuild BlazorWebView.iOS.csproj /t:Build /p:Configuration=Release
-    - name: Push nuget packages
-      working-directory: ./packages/
-      run: |
-        dotnet nuget push BlazorWebView.Mac.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-        dotnet nuget push BlazorWebView.iOS.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-        dotnet nuget push BlazorWebView.Android.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Push BlazorWebView nuget packages
+      working-directory: ./
+      run: dotnet nuget push packages/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
