--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -44,4 +44,4 @@ jobs:
          MsBuild.exe BlazorWebView.Wpf.csproj /t:Build /p:Configuration=Release
     - name: Push BlazorWebView nuget packages
       working-directory: ./
-      run: dotnet nuget push packages/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push **/packages/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
